@@ -1,4 +1,7 @@
 2012-03-06 arnaud.fontaine
+* Show Component versions defined on the BusinessTemplate in ZODB Migration view.
+
+2012-03-06 arnaud.fontaine
 * Add registered version priority selection on BusinessTemplate_view for registering version priority of ZODB Components only for now.
 
 2012-03-05 arnaud.fontaine
